--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="./asset/img/grass.svg" alt="" class="w-[90%] max-w-[2000px] h-auto object-contain absolute bottom-[20px] ">
 
                 <!-- rockets -->
-                <img src="./asset/img/dawae_rockets.png" alt="" class="w-[150px] md:w-[200px] h-auto object-contain absolute right-[-12%] top-[5%] z-[3] rockets">
+                <img src="./asset/video/dawae_rockets.gif" alt="" class="w-[150px] md:w-[200px] h-auto object-contain absolute right-[-12%] top-[5%] z-[3] rockets">
 
                 <!-- clouds -->
                  <!-- left -->
@@ -77,8 +77,8 @@
              </div>
 
             <!-- hero image -->
-             <div class="w-full relative z-[2] h-auto flex justify-center flex-col items-center">
-                <img src="./asset/img/hero_image.png" alt="dawae" class="h-auto object-contain  w-[50%] xl:w-[300px] relative">
+             <div class="w-full relative z-[2] h-[300px] sm:h-[70vw] xl:h-[400px] min-[2000px]:h-[600px] flex justify-end flex-col items-center">
+                <img src="./asset/video/dawae_hero.gif" alt="dawae" class="h-auto object-contain  w-[50%] xl:w-[300px] absolute top-[-2%] xl:top-[-20%] min-[2000px]:top-[20%]">
                 <img src="./asset/img/image_hero_text.png" alt="dawae" class="h-auto object-contain w-[80%] xl:w-[700px] relative">
              </div>
 
@@ -176,7 +176,7 @@
 
             <!-- image -->
              <div class="w-full xl:w-[34%] h-auto xl:h-[600px] relative  flex  items-center justify-center ">
-                <img src="./asset/img/dawae_social.png" alt="" class="w-[60%] xl:w-[500px] min-[1600px]:w-[600px] h-auto object-contain">
+                <img src="./asset/video/dawae_dance.gif" alt="" class="w-[60%] xl:w-[500px] min-[1600px]:w-[600px] h-auto object-contain">
              </div>
 
                <!-- social media -->
@@ -389,10 +389,10 @@
                     <!-- bg dawae -->
                      <div class="w-full h-full flex justify-between items-center relative z-0">
                         <div class="relative w-[50%] h-full flex items-center">
-                            <img src="./asset/img/dawae_how.png" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute left-[-10%]">
+                            <img src="./asset/video/dawae_howTo.gif" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute left-[-10%]">
                         </div>
                         <div class="relative w-[50%] h-full flex items-center">
-                            <img src="./asset/img/dawae_how.png" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute right-[-10%]">
+                            <img src="./asset/video/dawae_howTo.gif" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute right-[-10%]">
                         </div>
                      </div>
                     <!-- title -->
@@ -462,7 +462,7 @@
     
                             </div>
 
-                            <img src="./asset/img/dawae_social.png" alt="" class="h-auto object-contain w-[30vw] xl:w-[400px] absolute max-[768px]:hidden right-[10%]">
+                            <img src="./asset/video/dawae_dance.gif" alt="" class="h-auto object-contain w-[30vw] xl:w-[400px] absolute max-[768px]:hidden right-[10%]">
     
                           </div>
 
