--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div class="ca flex justify-center items-center absolute w-full left-0 top-0 h-full z-[1]  ">  
 
-                    <div class="text copy_address  cursor-pointer z-[1] relative w-[290px] h-[20px] min-[550px]:w-[320px] md:w-[400px] xl:w-[1010px] min-[1500px]:w-[1050px] xl:h-[70px]   flex justify-center items-center copy-contract ">
+                    <div class="text copy_address  cursor-pointer z-[1] relative w-[290px] h-[20px] min-[550px]:w-[320px] md:w-[400px] xl:w-[73vw] min-[1500px]:w-[1050px] xl:h-[70px]   flex justify-center items-center copy-contract ">
  
                         <input type="text" value=" 0x012....6e53" class="opacity-0 absolute contractInput">
                         <p class="relative text-white medium_shadow ca_text ink-free_font text-[11px] md:text-[18px] xl:text-[42px] min-[1700px]:text-[40px] z-[1] value" data-set="0x00000000000000000000000">
@@ -254,7 +254,7 @@
          </section>
 
          <!-- games -->
-          <section id="games" class="w-full h-[400px] xl:h-[800px] relative flex justify-center items-center">
+          <section id="games" class="w-full h-[400px] md:h-[600px] xl:h-[800px] relative flex justify-center items-center">
 
              <div class="game_container w-full"> 
                     <div class="card-body w-full flex justify-center items-center">
@@ -302,10 +302,10 @@
                   </div>
 
                   <!-- text -->
-                   <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] text-[#68FFA5] text-[33px] md:text-[40px] xl:text-[54px] text-center">TOTAL SUPPLY <br>
+                   <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1]  color_changing_text1 text-[33px] md:text-[40px] xl:text-[54px] text-center">TOTAL SUPPLY <br>
                     10.000.000</p>
-                    <p class="medium_shadow my-[1rem] tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] text-[#FF68C2] text-[33px] md:text-[40px] xl:text-[54px] text-center">LIQUIDITY BURNT </p>
-                    <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] text-[#FF8A98] text-[33px] md:text-[40px] xl:text-[54px] text-center"> DA CLEVER TAX 0 % 
+                    <p class="medium_shadow my-[1rem] tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] color_changing_text2 text-[33px] md:text-[40px] xl:text-[54px] text-center">LIQUIDITY BURNT </p>
+                    <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] color_changing_text3 text-[33px] md:text-[40px] xl:text-[54px] text-center"> DA CLEVER TAX 0 % 
                       BUY AND SELL</p>
 
                 <!-- button social -->
@@ -336,11 +336,11 @@
              </div>
 
              <!-- roadmap -->
-              <div class="w-[95%] h-[550px] xl:h-[850px] relative flex items-center justify-center flex-col xl:mt-[100px] min-[500px]:pt-[100px] xl:pt-[70px]">
+              <div class="w-[95%] h-[350px] min-[500px]:h-[450px] xl:h-[650px] relative flex items-center justify-center flex-col xl:mt-[100px] min-[500px]:mt-[100px] xl:pt-[70px]">
 
                 <!-- title -->
-                 <div class=" w-[90%] min-[500px]:w-[400px] xl:w-[800px] h-[300px] absolute top-[-20px] xl:top-0 flex items-center justify-center z-[2]">
-                    <img src="./asset/img/bg_roadmap_title.svg" alt="" class="absolute w-full  h-full object-contain">
+                 <div class="w-[90%]  xl:w-[800px] h-[100px] absolute top-[-20px] min-[500px]:top-0 flex items-center justify-center z-[2] cursor-pointer duration-200 hover:rotate-[5deg]">
+                    <img src="./asset/img/bg_roadmap_title.svg" alt="" class="absolute w-auto h-[60px] xl:h-[125px] object-cover">
                     <p class="relative medium_shadow rotate-[-3deg] text-white text-[23px] xl:text-[40px]">DAWAE ROADMAP</p>
                  </div>
                     
@@ -388,11 +388,11 @@
                  <div class="relative max-w-[2000px] w-full h-[200px] xl:h-[500px] flex items-center justify-center overflow-hidden">
                     <!-- bg dawae -->
                      <div class="w-full h-full flex justify-between items-center relative z-0">
-                        <div class="relative w-[50%] h-full flex items-center">
+                        <!-- <div class="relative w-[50%] h-full flex items-center">
                             <img src="./asset/video/dawae_howTo.gif" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute left-[-10%]">
-                        </div>
-                        <div class="relative w-[50%] h-full flex items-center">
-                            <img src="./asset/video/dawae_howTo.gif" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute right-[-10%]">
+                        </div> -->
+                        <div class="relative w-full h-full flex items-center">
+                            <img src="./asset/video/dawae_howTo.gif" alt="" class="w-[150px] xl:w-[400px] h-auto object-contain absolute right-[-10%] dawae_howTo">
                         </div>
                      </div>
                     <!-- title -->
@@ -426,9 +426,11 @@
                      </div>
 
                       <!-- how to 2 -->
-                      <div class="relative how_to2 w-full flex justify-center md:justify-end h-auto px-[2rem]">
+                      <div class="relative  w-full flex justify-center md:justify-end h-auto px-[2rem]">
 
-                        <div class="w-[370px] min-[500px]:w-[400px] md:w-[440px] h-[260px] md:h-[300px] lg:w-[706px] lg:h-[405px] relative flex justify-center items-center pt-[4rem] px-[2rem]">
+                        <img src="./asset/video/dawae_how_text.gif" alt="" class="h-auto object-contain w-[30vw] xl:w-[400px] absolute max-[768px]:hidden left-[5%]">
+
+                        <div class="w-[370px] how_to2 min-[500px]:w-[400px] md:w-[440px] h-[260px] md:h-[300px] lg:w-[706px] lg:h-[405px] relative flex justify-center items-center pt-[4rem] px-[2rem]">
                             <img src="./asset/img/bg_how02.svg" alt="" class="w-full h-full absolute top-0 z-0 object-contain">
 
                             <div class="num w-[15%] h-full relative">
