--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <img src="./asset/img/bg_about_mobile.svg" alt="" class=" h-full object-contain w-[90%] max-w-[1700px] absolute min-[1024px]:hidden"> 
 
             <!-- text -->
-             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[600px] xl:w-[80%] max-w-[1500px] text-[18px] md:text-[30px] xl:text-[45px]">Listen up my bruddhas! You dont know da wae. Stop throwing your money at ebola tokens that just sink faster than a lead balloon and swipe your cash. This is not da wae, my bruhhas. I will show you da wae. Together, we spit on the jeets and non-believers who refuse to follow da wae. United, we will lead da wae, my bruddhas.</p>
+             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[600px] xl:w-[80%] max-w-[1500px] text-[18px] min-[2000px]:w-[1300px] md:text-[30px] xl:text-[45px]">Listen up my bruddhas! You dont know da wae. Stop throwing your money at ebola tokens that just sink faster than a lead balloon and swipe your cash. This is not da wae, my bruhhas. I will show you da wae. Together, we spit on the jeets and non-believers who refuse to follow da wae. United, we will lead da wae, my bruddhas.</p>
          </section>
 
           <!--contract -->
