--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@
                      </div>
 
                       <!-- how to 2 -->
-                      <div class="relative  w-full flex justify-center items-center flex-col md:flex-row md:justify-end h-auto px-[2rem]">
+                      <div class="relative  w-full flex justify-center items-center flex-col md:flex-row md:justify-end h-auto px-[2rem] max-[768px]:pt-[40vw]">
 
-                        <img src="./asset/video/dawae_how_text.gif" alt="" class="h-auto object-contain w-[50vw] md:w-[30vw] xl:w-[400px] relative md:absolute md:left-[5%]">
+                        <img src="./asset/video/dawae_how_text.gif" alt="" class="h-auto object-contain w-[50vw] md:w-[30vw] xl:w-[400px] absolute md:left-[5%] z-[0] max-[768px]:top-[0]">
 
-                        <div class="w-[370px] how_to2 min-[500px]:w-[400px] md:w-[440px] h-[260px] md:h-[300px] lg:w-[706px] lg:h-[405px] relative flex justify-center items-center pt-[4rem] px-[2rem]">
+                        <div class="w-[370px] z-[1] how_to2 min-[500px]:w-[400px] md:w-[440px] h-[260px] md:h-[300px] lg:w-[706px] lg:h-[405px] relative flex justify-center items-center pt-[4rem] px-[2rem]">
                             <img src="./asset/img/bg_how02.svg" alt="" class="w-full h-full  absolute top-0 z-0 object-contain">
 
                             <div class="num w-[15%] h-full relative">
