--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en">
 
-
-<!-- Mirrored from dawae.io/home.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Jun 2024 21:40:25 GMT -->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
+
 
     <link rel="stylesheet" href="./cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
 
@@ -56,7 +54,7 @@
             <!-- bg hero -->
              <div class="bg absolute w-full h-full bottom-0 left-0 z-0 flex justify-center items-center overflow-hidden">
                 
-                <img src="./asset/img/hero_land.svg" alt="" class="w-[110vw] h-[60vw] xl:h-[60vw] min-[1500px]:h-[50vw] min-[1700px]:h-[50vw] absolute bottom-0 xl:bottom-[-35%] min-[1500px]:bottom-[-40%] min-[2500px]:bottom-[-26vw] object-cover">
+                <img src="./asset/img/hero_land.svg" alt="" class="w-[110vw] h-[60vw] xl:h-[60vw]   min-[1700px]:bottom-[-30vw] absolute bottom-0 xl:bottom-[-35%] min-[1500px]:bottom-[-27vw] min-[2500px]:bottom-[-26vw] object-cover">
                 <!-- grass -->
                 <img src="./asset/img/grass.svg" alt="" class="w-[90%]  max-w-[2000px] h-auto object-contain absolute bottom-[20px] ">
 
@@ -864,5 +862,4 @@
 </body>
 
 
-<!-- Mirrored from dawae.io/home.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Jun 2024 21:48:49 GMT -->
 </html>
