--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 
 
     <!--  popup  container -->
-      <div class="pop_up_container hidden">
+      <div class="pop_up_container ">
         <div class="popUp">
             <div class="bg"></div>
             <p>DO YOU KNOW THE WAY BRUDDAH?</p>
