--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
             <!-- hero links -->
              <div class="flex justify-center items-center flex-wrap w-full h-auto  relative z-[2]  gap-[1rem] xl:gap-[4.5rem] my-[50px] xl:my-[70px]">
-                <a href="#about" class="uppercase text-white text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">about</a>
-                <a href="#game" class="uppercase text-white text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">game</a>
-                <a href="#dawaenomics" class="uppercase text-white text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">dawaenomics</a>
-                <a href="#memes" class="uppercase text-white text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">memes</a> 
+                <a href="#about" class="uppercase text-white duration-200 hover:scale-110 text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">about</a>
+                <a href="#game" class="uppercase text-white duration-200 hover:scale-110 text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">game</a>
+                <a href="#dawaenomics" class="uppercase text-white duration-200 hover:scale-110 text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">dawaenomics</a>
+                <a href="#memes" class="uppercase text-white duration-200 hover:scale-110 text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">memes</a> 
              </div>
 
              <!-- contract -->
