--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                <div class="w-full xl:w-[66%] h-auto relative  flex  items-center justify-center flex-wrap gap-[1rem] xl:gap-[2rem]">
 
                 <!-- telegram -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://web.telegram.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -193,7 +193,7 @@
                 </a>
 
                 <!-- twitter x -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://x.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -204,7 +204,7 @@
                 </a>
 
                 <!-- DEXTOOLS -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://www.dextools.io/app/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -215,7 +215,7 @@
                 </a>
 
                 <!-- etherscan -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://etherscan.io/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -682,7 +682,7 @@
                  <div class="w-full xl:w-[66%] h-auto relative  flex  items-center justify-center flex-wrap gap-[1rem] xl:gap-[2rem]">
 
                 <!-- telegram -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://web.telegram.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -693,7 +693,7 @@
                 </a>
 
                 <!-- twitter x -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://x.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -704,7 +704,7 @@
                 </a>
 
                 <!-- DEXTOOLS -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://www.dextools.io/app/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -715,7 +715,7 @@
                 </a>
 
                 <!-- etherscan -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://etherscan.io/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
