--- a/index.html
+++ b/index.html
@@ -100,12 +100,17 @@
               </div>
  
 
-        </section>
+        </section> 
 
         <!-- chart and image -->
          <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px]">
             <!-- chart -->
-            <img src="./asset/img/chart.png" alt="" class="border-[#68FFA5] border-[6px] h-auto object-contain w-[90%] max-w-[1700px]">
+            <!-- <img src="./asset/img/chart.png" alt="" class="border-[#68FFA5] border-[6px] h-auto object-contain w-[90%] max-w-[1700px]"> -->
+
+            <video class="video_service h-auto relative z-[1] w-[90%] max-w-[2000px] h-auto border-[#68FFA5] border-[6px] object-contain rounded-lg" 
+            autoplay loop muted playsinline >
+                <source src="./asset/video/dawae_chart.mp4" type="video/mp4"> 
+              </video>
 
             <!-- dawae -->
             <img src="./asset/img/dawae_image.png" alt="" class=" border-[6px] h-auto object-contain w-[90%] max-w-[1700px] float">
