--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
         </section> 
 
         <!-- chart and image -->
-         <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px]">
+         <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px] max-w-[1700px]">
             <!-- chart -->
-            <!-- <img src="./asset/img/chart.png" alt="" class="border-[#68FFA5] border-[6px] h-auto object-contain w-[90%] max-w-[1700px]"> -->
+           <div class="h-auto w-[90%] rounded-[30px] flex justify-center border-[#68FFA5] border-[6px]">
+            <img src="./asset/video/dawae_chart.gif" alt="" class=" h-auto object-contain w-full max-w-[1700px] rounded-[30px]">
+           </div>
 
-            <video class="video_service h-auto relative z-[1] w-[90%] max-w-[2000px] h-auto border-[#68FFA5] border-[6px] object-contain rounded-lg" 
+            <!-- <video class="video_service h-auto relative z-[1] w-[90%] max-w-[2000px] h-auto border-[#68FFA5] border-[6px] object-contain rounded-lg" 
             autoplay loop muted playsinline >
                 <source src="./asset/video/dawae_chart.mp4" type="video/mp4"> 
-              </video>
+              </video> -->
 
             <!-- dawae -->
             <img src="./asset/img/dawae_image.png" alt="" class=" border-[6px] h-auto object-contain w-[90%] max-w-[1700px] float">
