--- a/index.html
+++ b/index.html
@@ -776,8 +776,8 @@
 
 
     <!--  popup  container -->
-      <div class="pop_up_container ">
-        <div class="popUp">
+      <div class="pop_up_container  ">
+        <div class="popUp max-h-[90%]">
             <div class="bg"></div>
             <p>DO YOU KNOW THE WAY BRUDDAH?</p>
             <div class="btns">
