--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <!-- chart and image -->
          <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px] max-w-[1700px]">
             <!-- chart -->
-           <div class="h-auto w-[90%] rounded-[30px] flex justify-center border-[#68FFA5] border-[6px]">
-            <img src="./asset/video/dawae_chart.gif" alt="" class=" h-auto object-contain w-full max-w-[1700px] rounded-[30px]">
+           <div class="h-auto w-[90%] rounded-[10px] md:rounded-[30px] flex justify-center border-[#68FFA5] border-[3px] md:border-[6px]">
+            <img src="./asset/video/dawae_chart.gif" alt="" class=" h-auto object-contain w-full max-w-[1700px] rounded-[10px] md:rounded-[30px]">
            </div>
 
             <!-- <video class="video_service h-auto relative z-[1] w-[90%] max-w-[2000px] h-auto border-[#68FFA5] border-[6px] object-contain rounded-lg" 
