--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </a>
 
                 <!-- uniswap -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://uniswap.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -244,7 +244,7 @@
                 </a>
 
                 <!-- dexscreen -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://dexscreener.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -496,7 +496,7 @@
                 <!-- buy -->
                  <div class="w-full flex justify-center items-center h-[100px] xl:h-[170px]">
                        <!-- uniswap -->
-                    <a href="#" class="w-[70%] h-[50px] md:w-[400px]  xl:w-[620px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#866DE7] relative">
+                    <a href="https://uniswap.org/" target="_blank" class="w-[70%] h-[50px] md:w-[400px]  xl:w-[620px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#866DE7] relative">
 
                         <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#6049B8] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -513,99 +513,99 @@
              <section id="memes" class="w-full   h-auto relative flex flex-col my-[3rem]">
 
                 <!-- row 1 -->
-                 <div class="memes_container w-full relative h-[35vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
+                 <div class="memes_container w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
                     <div class="memes_animation h-full  flex">
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/3to14q.jpg" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/newmemes1.jpg" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/memes4.png" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/newmemes3.jpeg" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/memes2.png" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5634.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5625.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/newmemes2.jpg" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5627.PNG" alt="" class="w-full h-full object-cover">
                          </div>
                     </div>
                  </div>
                    
                  <!-- row 2 -->  
-                 <div class="memes_container reverse_animation w-full relative h-[35vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
+                 <div class="memes_container reverse_animation w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
                     <div class="memes_animation h-full  flex">
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5627.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5628.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5630.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5631.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5632.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5635.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5636.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5626.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5627.PNG" alt="" class="w-full h-full object-cover">
                          </div>
                     </div>
                  </div>
 
                    <!-- row 3 -->  
-                   <div class="memes_container  w-full relative h-[35vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
+                   <div class="memes_container  w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
                     <div class="memes_animation h-full  flex">
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5636.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5638.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5637.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5643.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5646.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/memes3.png" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/memes1.png" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5632.PNG" alt="" class="w-full h-full object-cover">
                          </div>
-                         <div class="slide w-[35vw] md:w-[25vw] h-full flex justify-center items-center">
+                         <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5646.PNG" alt="" class="w-full h-full object-cover">
                          </div>
                     </div>
@@ -733,7 +733,7 @@
                 </a>
 
                 <!-- uniswap -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://uniswap.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -744,7 +744,7 @@
                 </a>
 
                 <!-- dexscreen -->
-                <a href="#" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://dexscreener.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
