--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              </div>
 
              <!-- contract -->
-              <div class="copy_address flex justify-center items-center  w-[90%] xl:w-[1200px] h-[50px] xl:h-[100px]  relative z-[2]   border-[3px] border-black ">
+              <div class="copy_address cursor-pointer flex justify-center items-center  w-[90%] xl:w-[1200px] h-[50px] xl:h-[100px]  relative z-[2]   border-[3px] border-black ">
                 <div class="ca flex justify-center items-center h-full w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[15px] md:text-[30px] xl:text-[50px] medium_shadow value" data-set="0x00000000000000000000000">
                     <span>0x00000000000000000000000.....dEaD</span>
                 </div>
@@ -147,7 +147,7 @@
 
                 <div class="ca flex justify-center items-center absolute w-full left-0 top-0 h-full z-[1]  ">  
 
-                    <div class="text copy_address  cursor-pointer z-[1] relative w-[290px] h-[20px] min-[550px]:w-[320px] md:w-[400px] xl:w-[73vw] min-[1500px]:w-[1050px] xl:h-[70px]   flex justify-center items-center copy-contract ">
+                    <div class="text copy_address cursor-pointer   z-[1] relative w-[290px] h-[20px] min-[550px]:w-[320px] md:w-[400px] xl:w-[73vw] min-[1500px]:w-[1050px] xl:h-[70px]   flex justify-center items-center copy-contract ">
  
                         <input type="text" value=" 0x012....6e53" class="opacity-0 absolute contractInput">
                         <p class="relative text-white medium_shadow ca_text ink-free_font text-[11px] md:text-[18px] xl:text-[42px] min-[1700px]:text-[40px] z-[1] value" data-set="0x00000000000000000000000">
@@ -295,7 +295,7 @@
                  <img src="./asset/img/token_text.svg" alt="" class="relative w-[80%] xl:w-[600px]  h-auto z-[1]">
 
                  <!-- ca -->
-                 <div class="flex copy_address justify-center items-center  w-[85%] xl:w-[60%] h-[50px] xl:h-[60px]  relative z-[2]   border-[3px] border-black my-[2rem]">
+                 <div class="flex copy_address cursor-pointer justify-center items-center  w-[85%] xl:w-[60%] h-[50px] xl:h-[60px]  relative z-[2]   border-[3px] border-black my-[2rem]">
                     <div class="ca flex justify-center items-center h-full w-[85%] lg:w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[14px] xl:text-[21px]  thin_shadow value" data-set="0x00000000000000000000000">
                         <span>0x00000000000000000000000.....dEaD</span>
                     </div>
