--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
             <!-- hero links -->
              <div class="flex justify-center items-center flex-wrap w-full h-auto hero_links relative z-[2]  gap-[1rem] xl:gap-[4.5rem] my-[50px] xl:my-[70px]">
-                <a href="#about" class="uppercase text-white duration-200   text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">about</a>
-                <a href="#game" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">game</a>
-                <a href="#dawaenomics" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">dawaenomics</a>
-                <a href="#memes" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] link_shadow font-bold">memes</a> 
+                <a href="#about" class="uppercase text-white duration-200   text-[16px] sm:text-[21px] xl:text-[30px] min-[1600px]:text-[40px] link_shadow font-bold">about</a>
+                <a href="#game" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] min-[1600px]:text-[40px] link_shadow font-bold">game</a>
+                <a href="#dawaenomics" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] min-[1600px]:text-[40px] link_shadow font-bold">dawaenomics</a>
+                <a href="#memes" class="uppercase text-white duration-200  text-[16px] sm:text-[21px] xl:text-[30px] min-[1600px]:text-[40px] link_shadow font-bold">memes</a> 
              </div>
 
              <!-- contract -->
@@ -127,7 +127,7 @@
             <img src="./asset/img/bg_about_mobile.svg" alt="" class=" h-full object-contain w-[90%] max-w-[1700px] absolute min-[1024px]:hidden"> 
 
             <!-- text -->
-             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[600px] xl:w-[80%] max-w-[1500px] min-[1500px]:w-[70%] text-[18px] min-[2000px]:w-[1300px] md:text-[30px] xl:text-[45px]">Listen up my bruddhas! You dont know da wae. Stop throwing your money at ebola tokens that just sink faster than a lead balloon and swipe your cash. This is not da wae, my bruhhas. I will show you da wae. Together, we spit on the jeets and non-believers who refuse to follow da wae. United, we will lead da wae, my bruddhas.</p>
+             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[600px] lg:w-[80%] xl:w-[80%] max-w-[1500px] min-[1500px]:w-[70%] text-[18px] min-[2000px]:w-[1300px] md:text-[30px] min-[900px]:text-[3vw] xl:text-[45px]">Listen up my bruddhas! You dont know da wae. Stop throwing your money at ebola tokens that just sink faster than a lead balloon and swipe your cash. This is not da wae, my bruhhas. I will show you da wae. Together, we spit on the jeets and non-believers who refuse to follow da wae. United, we will lead da wae, my bruddhas.</p>
          </section>
 
           <!--contract -->
@@ -507,7 +507,7 @@
             </section>
 
             <!-- memes -->
-             <section id="memes" class="w-full   h-auto relative flex flex-col my-[3rem]">
+             <section id="memes" class="w-full   h-auto relative flex flex-col   my-[3rem]">
 
                 <!-- row 1 -->
                  <div class="memes_container w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
@@ -543,7 +543,7 @@
                  </div>
                    
                  <!-- row 2 -->  
-                 <div class="memes_container reverse_animation w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
+                 <div class="memes_container reverse_animation pt-[.55rem] w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
                     <div class="memes_animation h-full  flex">
                          <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/IMG_5627.PNG" alt="" class="w-full h-full object-cover">
@@ -757,8 +757,8 @@
                 </section>
 
                 <!-- by -->
-                 <p class="medium_shadow w-[90%] mb-[3rem] xl:w-[1150px] text-center text-white text-[25px] md:text-[45px]">This token is simply paying homage to a meme we all love and recognize. $DAWAE is a meme coin with no intrinsic value or expectation of financial return. The coin is completely useless and for entertainment purposes only.</p>
-                 <p class="medium_shadow w-[90%] xl:w-[1150px] text-center text-white text-[20px]  md:text-[40px]">© 2024 Copyright: dawaecoin</p>
+                 <p class="medium_shadow w-[90%] mb-[3rem] xl:w-[1150px] text-center text-white text-[25px] min-[500px]:text-[6vw] md:text-[45px]">This token is simply paying homage to a meme we all love and recognize. $DAWAE is a meme coin with no intrinsic value or expectation of financial return. The coin is completely useless and for entertainment purposes only.</p>
+                 <p class="medium_shadow w-[90%] xl:w-[1150px] text-center text-white text-[20px]  min-[500px]:text-[6vw] md:text-[40px]">© 2024 Copyright: dawaecoin</p>
 
              </footer>
 
