--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
 
         </section> 
 
+        <!-- memes -->
+         <section class="bg-[#537CBC] relative w-full h-auto flex justify-center items-center mt-[100px]">
+              <img src="./asset/img/memes/memesSection.png" alt="" class="max-w-[90%] h-[300px] min-[600px]:h-[50vw] xl:h-[800px] w-auto object-contain relative">
+        </section>
+
         <!-- chart and image -->
          <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px] max-w-[1700px]">
             <!-- chart -->
