--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <title>DO YOU KNOW $DAWAE</title>
 </head>
 
-<body class="body-homepage bg-[#49B876]">
+<body class="body-homepage bg-[#537CBC]">
 
    
     <!-- container website -->
