--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section> 
 
         <!-- memes -->
-         <section class="bg-[#537CBC] relative w-full h-auto flex justify-center items-center mt-[100px]">
+         <section class=" relative w-full h-auto flex justify-center items-center mt-[100px]">
               <img src="./asset/img/memes/memesSection.png" alt="" class="max-w-[90%] h-[300px] min-[600px]:h-[50vw] xl:h-[600px] min-[1700px]:h-[800px] w-auto object-contain relative">
         </section>
 
